feat: Product 관련 test 구현